tests/errors/semantic/non_blocking/INCOMPATIBLE_TYPES_IN_ASSIGNMENT_2.py
import numpy as np


a = np.float32(4)
a += 5.0
